Free dump portal info task from cbioportal services
Use its own DAO instead